# urban-signal-fusion

./: LICENSE  README.md  instructions.md  pyproject.toml  requirements.txt
anomaly/: alert_publisher.py  baseline_builder.py  detector.py  models.py
api/: main.py
api/routers/: anomalies.py  export.py  history.py  locations.py  scores.py
cache/: redis_client.py  score_store.py  snapshot_store.py
config/: settings.py  signal_weights.yaml
dashboard/: app.py
dashboard/components/: alert_feed.py  hex_map.py  signal_breakdown.py
dashboard/utils/: location_api.py  theme.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/utils/: locationApi.js
fusion/: geo_aggregator.py  h3_mapper.py  models.py  normalizer.py  scorer.py  weights.py
infra/: docker-compose.yml
ingestion/: kafka_utils.py
ingestion/consumers/: signal_consumer.py
ingestion/producers/: access_producer.py  base_producer.py  crowd_producer.py  heat_producer.py  noise_producer.py  transit_producer.py
ingestion/schemas/: signal_schema.py
tests/integration/: test_pipeline.py
tests/unit/: test_detector.py  test_normalizer.py  test_scorer.py
urban_signal_fusion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
