[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-signal-fusion"
version = "2.0.0"
description = "Multi-Modal City Stress Score Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.3.0",
    "geopandas>=0.14.3",
    "shapely>=2.0.2",
    "h3>=4.0.0b1",
    "redis>=5.0.1",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "structlog>=24.1.0",
    "pyyaml>=6.0.1",
    "websockets>=12.0",
    "requests>=2.31.0",
    "geopy>=2.4.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "ruff>=0.3.5"
]

[tool.setuptools]
packages = ["api", "anomaly", "cache", "config", "fusion", "ingestion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
